- MUC: Changed cache store for coursecat. Moved to default session
- xtec-mailer: Fixed compatibility with PHP 7.3
- Added atto plugin Cloze
- Upgraded all wiris plugins
- Upgraded module hot potatoes
- Upgraded module choicegroup
- Upgraded module H5P
- Upgraded question format hot potatoes
- Upgraded question type "ordering"


Changes 19.09.25
---------------------------------------------------------------------------------------
- Upgraded Moodle from v3.6.5 to v3.6.6
- Updated language packs
- Re-added Catalonia to countries list
- Made exception for FRM environment to put cache files in moodledata
- Oauth2 server: Updated code to connect to WordPress
- Marsupial: Updated components
- Upgraded all wiris plugins
- Upgraded module clickedu
- Upgraded module geogebra
- Upgraded module hot potatoes
- Upgraded module H5P
- Upgraded block "completion progress"
- Upgraded question type "ordering"


Changes 19.08.29
---------------------------------------------------------------------------------------
- Fixed cache pollution due to XTEC patches
- Improved cache definitions


Changes 19.07.24
---------------------------------------------------------------------------------------
- Upgraded Moodle from v3.4.8 to v3.6.5
- Updated translation files
- Modified theme XTEC2 for compatibility to Moodle v3.6.5
- Upgraded all wiris plugins
- Upgraded module choicegroup
- Upgraded module hotpot
- Upgraded module H5P
- Upgraded module journal
- Upgraded module questionnaire
- Upgraded block "completion progress"
- Upgraded question type "ordering"
- Upgraded question type "wq"
- Local agora: Removed old message_notifier plugin
- Local agora: Disallow theme boost


Changes 19.04.15
---------------------------------------------------------------------------------------
- Moodle upgraded to from 3.4.8
- Align availability label next to the activity title
- Add the temp configuration to the agora config file
- Updated LangPacks
- Updated auth/googleauth2
- Updated mod/hvp